2006-03-09  Andreas Köhler  <andi5.py@gmx.net>

	* src/gnome-utils/gnc-main-window.c: Move retrieval of private
	  data of main window after the creation of the window.

2006-03-09  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-model-commodity.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/gnc-tree-model-price.c:
	* src/gnome-utils/gnc-plugin-page.[ch]:
	* src/gnome-utils/gnc-account-sel.c:
	* src/gnome-utils/account-quickfill.c:
	* src/engine/gnc-commodity.h:
	* src/engine/gnc-engine.h:
	* src/app-utils/gnc-component-manager.c:
	* lib/libqof/qof/deprecated.[ch]:
	* lib/libqof/qof/qofevent.c:
	* lib/libqof/qof/qofevent-p.h:
	* configure.in: Finish removing deprecated QOF functions.

	* src/gnome/dialog-price-editor.c:
	* src/gnome/top-level.c:
	* src/gnc-ui.h: Restore clickable links for price quotes.

2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* src/optional/Makefile.am : Make xsl/ available
	for installation and therefore packaging.

2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* src/gnome/druid-merge.c : Use new function names.
	* src/engine/test/test-book-merge.c : Use new function names.

	* lib/libqof/qof/qof_book_merge.c : Removed.
	* lib/libqof/qof/qof_book_merge.h : Removed.
	* lib/libqof/qof/qofbookmerge.c : Replacement file.
	* lib/libqof/qof/qofbookmerge.h : Replacement file.
	* lib/libqof/qof/qof.h : Use new filename.
	* lib/libqof/qof/deprecated.c : Deprecate old function
	names from qof_book_merge in favour of new from qofbookmerge.
	* lib/libqof/qof/deprecated.h : Added deprecated function
	declaration.s
	* lib/libqof/qof/Makefile.am : New files.

2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/qof/qofquery-deserial.c : Update status; this
	file will not exist in libqof2

2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/qof/qofevent.h : Doxygen tweak.

2006-03-09  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/backend/file/qsf-backend.c : Remove deprecated