@@ -7,7 +7,17 @@
 //extern "C" {
 #endif
 
-#include <glob.h>
+#ifdef HAVE_GLOB_H
+# include <glob.h>
+#else
+typedef struct
+{
+  size_t gl_pathc;    /* Count of paths matched so far  */
+  char **gl_pathv;    /* List of matched pathnames.  */
+  size_t gl_offs;     /* Slots to reserve in `gl_pathv'.  */
+} glob_t;
+#endif
+
 #include <glib.h>
 #include <glib-object.h>
 #include <libgnomeui/libgnomeui.h>
